ecmascript/parser/tests/test262-error-references/fail/7dd7279ecf6a7eb8.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/7dd7279ecf6a7eb8.js:1:3
  |
1 | f(..g);
  |   ^

